[package]
name = "aci_ppm"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]
description = """
Aldaron's Codec Interface - PPM: A small library for parsing ppm image files.
"""
keywords = [ "Image", "PPM", "Codec", "Parse" ]
categories = [
	"no-std", "data-structures", "encoding", "parser-implementations",
	"parsing"
]
license = "MIT"
documentation = "https://docs.rs/aci_ppm/"
homepage = "https://docs.rs/crate/aci_ppm/"
repository = "https://github.com/aldarons-tech/aci_ppm"
readme = "README.md"
exclude = [ "examples/*", ".gitignore", "TODO" ]

[dependencies]
