# Aldaron's Codec Interface / PPM                                              #
# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
# Licensed under the MIT LICENSE                                               #
#                             _        _                                       #
#                            /@\——————/@\                                      #
# .———  .                   |   o    o   |     .————      .            .       #
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   . #
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   | #
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /  #
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |   #
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |   #
#                 |        \              /                              __/   #
#                           ¯————————————¯                                     #
# Cargo.toml                                                                   #

################################################################################

[package]
name = "aci_ppm"
version = "0.3.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]

################################################################################

license = "MIT"
documentation = "https://docs.rs/aci_ppm"
homepage = "http://plopgrizzly.com/aci_ppm"
repository = "https://github.com/plopgrizzly/aci_ppm"

################################################################################

readme = "README.md"
description = """
    Aldaron's Codec Interface / PPM is a small library developed by Plop Grizzly
    for decoding ppm image files.
"""
keywords = [ "Image", "PPM", "Codec", "Parse" ]
categories = [ "no-std", "data-structures", "encoding", "parsing",
	"parser-implementations"]

################################################################################

exclude = [
	"examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore",
	"_config.yml", "ISSUE_TEMPLATE.md"
]

################################################################################

[dependencies]
afi = "^0.2"
ami = "^0.5"

################################################################################
