# Cargo.toml -- Aldaron's Codec Interface / PPM
# Copyright (c) 2017-2018  Jeron A. Lau <jeron.lau@plopgrizzly.com>
# Licensed under the MIT LICENSE
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯

[package]
name = "aci_ppm"
version = "0.5.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]

license = "MIT"
documentation = "https://docs.rs/aci_ppm"
homepage = "http://plopgrizzly.com/aci_ppm"
repository = "https://github.com/plopgrizzly/aci_ppm"

readme = "README.md"
description = "Encode(TODO) and decode ppm image files."
keywords = ["Image","PPM","Codec","Parse"]
categories = ["data-structures","encoding","parsing","parser-implementations"]

exclude = [
	"examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore",
	"_config.yml", "ISSUE_TEMPLATE.md"
]

[dependencies]
afi = "^0.5"
byteorder = "^1.2.2"
